Fix various styling issues, mostly mobile
Add horizontal whitespace between blocks in places.

Shrink side margins around home page imageTextLink on mobile.

Fix distorted tool icons on mobile.

--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -24,7 +24,7 @@
             margin: 160px 80px 0 80px;
 
             @include mq-below(mid-small) {
-                margin-top: 80px;
+                margin: 80px 3vw 0 3vw;
             }
         }
 
